# aliyun-tablestore-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md  build.rs
.zed/: settings.json
examples/: gen_data.rs  get_range_example.rs  table_example.rs
schema/: example.fbs  example.proto
src/: crc8.rs  error.rs  index.rs  lib.rs  macros.rs  sql.rs  table.rs  test_util.rs  util.rs
src/analytical_store/: create_analytical_store.rs  delete_analytical_store.rs  describe_analytical_store.rs  mod.rs  update_analytical_store.rs
src/data/: batch_get_row.rs  batch_write_row.rs  bulk_export.rs  bulk_import.rs  delete_row.rs  get_range.rs  get_row.rs  mod.rs  put_row.rs  update_row.rs
src/defined_column/: add_defined_column.rs  delete_defined_column.rs  mod.rs
src/index/: create_index.rs  drop_index.rs  mod.rs
src/lastpoint_index/: create_lastpoint_index.rs  delete_lastpoint_index.rs  mod.rs
src/model/: column.rs  defined_column.rs  filter.rs  get_range_response.rs  get_row_response.rs  mod.rs  primary_key.rs  row.rs  rules.rs
src/protos/: mod.rs  plain_buffer.rs  simple_row_matrix.rs  table_store.proto  table_store.rs  table_store_filter.proto  table_store_filter.rs  table_store_search.proto  table_store_search.rs  timeseries.fbs  timeseries.proto  timeseries.rs  timeseries_fbs.rs  timeseries_generated.rs
src/row/: get_range.rs  get_row.rs  mod.rs
src/search/: aggregation.rs  compute_splits.rs  create_search_index.rs  delete_search_index.rs  describe_search_index.rs  filter.rs  group_by.rs  list_search_index.rs  mod.rs  parallel_scan.rs  query.rs  score_function.rs  search.rs  search_index.rs  sort_by.rs  update_search_index.rs
src/search_index/: create_search_index.rs  list_search_index.rs  mod.rs  update_search_index.rs
src/table/: compute_split_points.rs  create_table.rs  delete_table.rs  describe_table.rs  list_table.rs  mod.rs  update_table.rs
src/timeseries_data/: delete_meta.rs  get_data.rs  mod.rs  put_data.rs  query_meta.rs  scan_data.rs  split_scan.rs  update_meta.rs
src/timeseries_model/: key.rs  (+7 more)
(+6 files in other folders)
