[package]
name = "aliyun-tablestore-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
byteorder = "1.5.0"
bytes = "1.10.1"
chrono = "0.4.40"
hex = "0.4.3"
hmac = "0.12.1"
hmac-sha1 = "0.2.2"
log = "0.4.26"
md5 = "0.7.0"
prost = "0.13.5"
rand = "0.9.0"
regex = "1.11.1"
reqwest = "0.12.13"
sha1 = "0.10.6"
sha2 = "0.10.8"
thiserror = "2.0.12"
tokio = { version = "1.44.0", features = ["full"] }
url = "2.5.4"

[build-dependencies]
prost-build = "0.13.5"

[dev-dependencies]
dotenvy = "0.15.7"
fake = { version = "4.0.0", features = ["uuid"] }
md5 = "0.7.0"
rand = "0.9.0"
simple_logger = "5.0.0"
